# notify-kit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  llms.txt
.github/workflows/: ci.yml
bots/: README.md
bots/_shared/: bootstrap.mjs  limiter.mjs  log.mjs  opencode.mjs  opencode.test.mjs  session_store.mjs  session_store.test.mjs
bots/opencode-dingtalk-stream/: README.md
bots/opencode-discord/: README.md
bots/opencode-feishu/: README.md
bots/opencode-github-action/: README.md  action.yml
bots/opencode-slack/: README.md  package.json
bots/opencode-telegram/: README.md
bots/opencode-wecom/: README.md
crates/codepm-notify/: Cargo.toml
crates/codepm-notify/src/: config.rs  event.rs  hub.rs  lib.rs  main.rs
crates/codepm-notify/src/sinks/: feishu.rs  mod.rs  sound.rs
crates/notify-kit/: Cargo.toml
crates/notify-kit/src/: env.rs  hub.rs  lib.rs
crates/notify-kit/src/sinks/: bark.rs  crypto.rs  dingtalk.rs  discord.rs  feishu.rs  generic_webhook.rs  github.rs  http.rs  mod.rs  pushplus.rs  serverchan.rs  slack.rs  sound.rs  telegram.rs  text.rs  wecom.rs
docs/: README.md  SUMMARY.md  book.toml  bots.md  concepts.md  design.md  development.md  examples.md  faq.md  getting-started.md  integration.md  security.md
docs/api/: README.md  event.md  hub.md  sink.md
docs/sinks/: README.md  bark.md  custom.md  dingtalk.md  discord.md  feishu.md  github.md  pushplus.md  serverchan.md  slack.md  sound.md  telegram.md  (+2 more)
githooks/: commit-msg  pre-commit
scripts/: bootstrap.sh  build-llms-txt.py  build-llms-txt.sh  docs.sh  gate.sh  pre-commit-check.sh
(+7 files in other folders)
