[package]
name = "codepm-notify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
tracing = "0.1"
