[package]
name = "notify-kit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
# Allow SoundSink to execute external commands (SoundConfig.command_argv).
sound-command = []

[dependencies]
anyhow = "1"
base64 = "0.22"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tracing = "0.1"
